# IqOrm

./: .gitignore  CMakeLists.txt  README.md  qdoc.qdocconf
examples/IqOrmMetaModel/: user.cpp  user.h
examples/IqOrmObject/: person.cpp  person.h  use_example.cpp
src/: IqOrmAbstractDataSource  IqOrmAbstractObjectDataSource  IqOrmAbstractTriggers  IqOrmCore  IqOrmDataSourceOperationResult  IqOrmDirectPropertyDescription  IqOrmFilter  IqOrmInversedManyToManyPropertyDescription  IqOrmInversedOneToOnePropertyDescription  IqOrmJoinTable  IqOrmLazyPointer  IqOrmLazyPointerSet  IqOrmManyToManyPropertyDescription  IqOrmMetaModel  IqOrmModel  IqOrmObject  IqOrmOneToManyPropertyDescription  IqOrmOrGroupFilter  IqOrmSharedLazyPointer  IqOrmSharedLazyPointerSet  IqOrmTransactionControl  iqorm_global.h  iqormabstractdatasource.cpp  iqormabstractdatasource.h  iqormabstractfilter.h  iqormabstractmodeldatasource.cpp  iqormabstractmodeldatasource.h  iqormabstractobjectdatasource.cpp  iqormabstractobjectdatasource.h  iqormabstractobjectsmodeldatasource.cpp  iqormabstractobjectsmodeldatasource.h  iqormabstracttriggers.cpp  iqormabstracttriggers.h  iqormandgroupfilter.h  iqormbaseinversedmanytomanypropertydescription.h  iqormbaseinversedonetoonepropertydescription.cpp  iqormbaseinversedonetoonepropertydescription.h  iqormbasemanytoonepropertydescription.cpp  iqormbasemodel.cpp  iqormbasemodel.h  (+127 more)
src/filters/: IqOrmAbstractFilter  IqOrmAndGroupFilter  iqormabstractfilter.cpp  iqormandgroupfilter.cpp  iqormandgroupfilter.h  iqormfilter.h  iqormgroupfilter.cpp  iqormgroupfilter.h  iqormorgroupfilter.cpp
src/private_accessors/: iqormmetamodelprivateaccessor.cpp  iqormmetamodelprivateaccessor.h  iqormmodelprivateaccessor.h  iqormobjectprivateaccessor.cpp  iqormobjectprivateaccessor.h
src/property_changes/: iqormdirectpropertychanges.h  iqorminversedmanytomanypropertychanges.cpp  iqorminversedmanytomanypropertychanges.h  iqorminversedonetoonepropertychanges.cpp  iqormmanyobjectdiscribingpropertychanges.h  iqormmanytomanypropertychanges.cpp  iqormoneobjectdescribingpropertychanges.cpp  iqormoneobjectdescribingpropertychanges.h  iqormpropertychanges.cpp
src/property_descriptions/: IqOrmManyToOnePropertyDescription  IqOrmOneToOnePropertyDescription  iqormbaseinversedmanytomanypropertydescription.cpp  iqormbasemanytomanypropertydescription.cpp  iqormbasemanytomanypropertydescription.h  iqormbasemanytoonepropertydescription.h  iqormbaseonetomanypropertydescription.cpp  iqormbaseonetoonepropertydescription.h  iqormdirectmappedpropertydescription.cpp  iqormdirectpropertydescription.cpp  iqorminversedmanytomanypropertydescription.cpp  iqorminversedmappedpropertydescription.cpp  iqorminversedmappedpropertydescription.h  iqorminversedonetoonepropertydescription.cpp  iqormjoincolumndirectmappedpropertydescription.cpp  iqormjointabledirectmappedpropertydescription.cpp  iqormmanyobjectdescribingpropertydescription.h  iqormmanyobjectdescribingpropertydescription_impl.h  iqormmanytomanypropertydescription.cpp  iqormmanytomanypropertydescription.h  iqormmanytoonepropertydescription.cpp  iqormmanytoonepropertydescription.h  iqormmappedpropertydescription.cpp  iqormmappedpropertydescription.h  iqormoneobjectdescribingpropertydescription.cpp  iqormoneobjectdescribingpropertydescription_impl.h  iqormonetomanypropertydescription.cpp  iqormonetoonepropertydescription.h  iqormpropertydescription.cpp  iqormpropertydescription.h
src/sql/: IqOrmSqlDataSource  IqOrmSqlOperationTracerLog  iqormsqldatasource.cpp  iqormsqldatasource.h  iqormsqlinversedmanytomanypropertychanges.cpp  iqormsqlinversedmanytomanypropertychanges.h  iqormsqljoinoperation.cpp  iqormsqljoinoperation.h  iqormsqlmanytomanypropertychanges.cpp  iqormsqlmanytomanypropertychanges.h  iqormsqlmodeldatasource.cpp  iqormsqlmodeldatasource.h  iqormsqlobjectdatasource.cpp  iqormsqlobjectdatasource.h  iqormsqloperationtracerlog.h
src/sql/property_description_processors/: iqormsqlabstractpropertydescriptionprocessor.cpp  iqormsqlabstractpropertydescriptionprocessor.h  iqormsqldirectpropertydescriptionprocessor.cpp  iqormsqldirectpropertydescriptionprocessor.h  iqormsqlinversedmanytomanypropertydescriptionprocessor.cpp  iqormsqlinversedonetoonepropertydescriptionprocessor.cpp  iqormsqlmanyobjectsdescribingpropertydescriptionprocessor.cpp  iqormsqlmanyobjectsdescribingpropertydescriptionprocessor.h  iqormsqlmanytomanypropertydescriptionprocessor.cpp  iqormsqlmanytoonepropertydescriptionprocessor.cpp  iqormsqlmappedpropertydescriptionprocessor.h  iqormsqloneobjectdescrtibingpropertydescriptionprocessor.cpp  iqormsqloneobjectdescrtibingpropertydescriptionprocessor.h  iqormsqlonetomanypropertydescriptionprocessor.cpp  iqormsqlonetoonepropertydescriptionprocessor.cpp  iqormsqlpropertydescriptionsprocessor.cpp  iqormsqlpropertydescriptionsprocessor.h
